--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
     "firebase": "^10.13.1",
+    "jstat": "^1.9.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-google-charts": "^4.0.5",
     "react-router-dom": "^6.26.2",
     "zustand": "^5.0.0-rc.2"
   },
