--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.3.1",
     "react-google-charts": "^4.0.5",
     "react-router-dom": "^6.26.2",
+    "react-toastify": "^10.0.5",
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
